# cosmos_reasoning

./: .gitignore  README.md  main.py  pyproject.toml  pyproject.toml.backup  settings.ini
bash_scripts/: download_mvtec.sh  download_wm811k.sh
cosmos_reasoning/: _modidx.py
nbs/: 01_explore_wafer_data.ipynb  02_explore_mvtec_data.ipynb  index.ipynb  nbdev.yml
